# jaratoolbox

./: .gitignore  README.md  __init__.py  behavioranalysis.py  celldatabase.py  clusteranalysis.py  ephyscore.py  ephysinterface.py  extrafuncs.py  extraplots.py  extrastats.py  histologyanalysis.py  loadbehavior.py  loadopenephys.py  pyproject.toml  settings_EXAMPLE.py  setup.py  soundanalysis.py  spikesanalysis.py  spikesorting.py  videoanalysis.py  waveformcutter.py
apps/: widefieldmapping.py
doc/: design_decisions.txt
docs/: tips_for_toolbox.txt
jaratoolbox/: __init__.py  behavioranalysis.py  celldatabase.py  colorpalette.py  ephyscore.py  ephysinterface.py  extrafuncs.py  extraplots.py  extrastats.py  facemapanalysis.py  histologyanalysis.py  loadbehavior.py  loadneuropix.py  loadopenephys.py  loadscanbox.py  loadtwophoton.py  loadwidefield.py  populationanalysis.py  pupilanalysis.py  settings_EXAMPLE.py  soundanalysis.py  speechsynth.py  spikesanalysis.py  spikesorting.py  twophotonanalysis.py  videoanalysis.py  videoinfo.py  widefieldanalysis.py
scripts/: README.md  copy_neuropix_info.py  neuropix_copy_settings.py  neuropix_create_prephy.py  neuropix_join_multiday.py  neuropix_join_multisession.py  neuropix_kilosort.py  neuropix_split_multiday.py  neuropix_split_multisession.py
test/: __init__.py  test002_sortedraster.py  test003_noise_raster.py  test006_spikesorting.py  test007_sortedraster.py  test008_CNO-tuning-curve.py  test009_tuning_curve.py  test010_CNOexperiment_spikes_per_session.py  test012_PCA.py  test013_GMM.py  test014_load_session_spikes.py  (+12 more)
(+673 files in other folders)
